# pong

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
include/: Ball.h  Player.h
src/: Ball.cpp  Player.cpp  main.cpp
